@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam nodesep 50
skinparam ranksep 60
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}

class User {
  +id : UUID
}

enum ServerServiceStatus {
  Running
  Stopped
  Maintenance
}

class Server {
  +id : UUID
  +name : String
  +ip : String
  +domain : String
  +cpus : String
  +ram : String
  +storage : String
  +paid : Boolean
  +status : ServerServiceStatus
  +expiredAt : DateTime
  +nextNotificationAt : DateTime
}
class Service {
  +id : UUID
  +name : String
  +domain : String
  +status : ServerServiceStatus
  +sslCertificate : Boolean
  +hasBackup : Boolean
  +paid : Boolean
  +expiredAt : DateTime
  +nextNotificationAt : DateTime
}
class ServerNotification {
  +id : UUID
  +message : String
  +isSent : Boolean «outbox»
}
class ServiceNotification {
  +id : UUID
  +message : String
  +isSent : Boolean «outbox»
}
class UserServerManagement {
  +id : UUID
}

Server "1" --> "0..*" Service : "hosts (cascade)"
Server "1" --> "0..*" ServerNotification : raises
Service "1" --> "0..*" ServiceNotification : raises
Server "1" --> "0..*" UserServerManagement : "managed via"
User "1" --> "0..*" UserServerManagement : manages

Server ..> ServerServiceStatus
Service ..> ServerServiceStatus
@enduml
